2017-06-01  Louis-Noel Pouchet  <pouchet@ryzen.pocc.homeunix.org>

	* polyopt/PolyOptISLRepresentation.cpp,
	* polyopt/include/polyopt/PolyOptISLRepresentation.hpp: New. Unit to translate
	a scoplib_scop_p to ISL representation, for processing by PolyCheck.
	* polyopt/PolyOpt.cpp: New API to only recognize scops, for subsequent
	translation to ISL:
	std::vector<std::pair<SgNode*,scoplib_scop_p> >
	PolyOptRecognizeScopsSubTree(SgNode* root, PolyRoseOptions& polyoptions);
	and then, on each scop in the output vector, call:
	PolyOptISLRepresentation
        PolyOptConvertScopToISL(scoplib_scop_p scop)
	* polyopt/Makefile.am: Update for new unit.

2017-05-29  Louis-Noel Pouchet  <pouchet@colostate.edu>

	* bootstrap.sh: Add.
	* pocc-installer.sh: update to fetch PoCC-1.4
	* tests/unitary/assigniter.passthru.c: delete trailing space.

2017-05-29  Louis-Noel Pouchet  <pouchet@colostate.edu>
	Check-in the lastest version of PolyOpt, with patches.
	Enable new options:
	--polyopt-scop-pragmas-only: only process regions starting w/ #pragma scop
	--polyopt-scop-in-separate-file: put original and transformed scops in separate
	files.

	* AUTHORS,
	* ChangeLog,
	* INSTALL,
	* Makefile.am,
	* Makefile.in,
	* NEWS,
	* README,
	* README.txt,
	* aclocal.m4,
	* benchmarks/,
	* benchmarks/Makefile.am,
	* benchmarks/Makefile.in,
	* benchmarks/run.pl.in,
	* config/,
	* config/ax_boost.m4,
	* config/ax_boost_base.m4,
	* config/ax_pocc.m4,
	* config/compile,
	* config/config.guess,
	* config/config.sub,
	* config/depcomp,
	* config/install-sh,
	* config/libtool.m4,
	* config/ltmain.sh,
	* config/ltoptions.m4,
	* config/ltsugar.m4,
	* config/ltversion.m4,
	* config/lt~obsolete.m4,
	* config/missing,
	* config/test-driver,
	* config/texinfo.tex,
	* configure,
	* configure.ac,
	* doc/,
	* doc/Makefile.am,
	* doc/Makefile.in,
	* doc/htmldoc.tar.gz,
	* doc/polyopt.info,
	* doc/polyopt.pdf,
	* doc/polyopt.texi,
	* install.sh,
	* pocc-installer.sh,
	* polyopt/,
	* polyopt/AffineConverter.cpp,